[package]
name = "oma-apt-sources-lists"
version = "0.2.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Library for fetching information from apt sources lists on the system"
license = "MIT"
readme = "README.md"
keywords = ["apt", "source", "list", "linux"]
categories = ["os::unix-apis"]
edition = "2021"

[dependencies]
err-derive = "0.3"
